brat/test/golden/error/toplevel-leftovers.brat.golden
Error in test/golden/error/toplevel-leftovers.brat on line 2:
f = 42
    ^^

  Type mismatch when checking f
Expected: (_0 :: Nat, _1 :: Bool)
But got:  (_0 :: Nat)


